src/test/vm/redeclared_method1.php.exp
HipHop Fatal error: Access level to C::foo() must be public (as in interface I) in src/test/vm/redeclared_method1.php on line 10
