src/test/vm/redeclared_method1.php
<?php
interface I {
  public function foo();
}
class C implements I {
  protected function foo() { echo "foo\n"; }
  public function bar() { $this->foo(); }
}
$obj = new C;
$obj->bar();
